<resources>
    <string name="app_name">BluetoothLowEnergy</string>

    <string name="connected_to">Connected to:</string>
    <string name="scan">Scan</string>
    <string name="stop">Stop</string>
    <string name="ble_not_supported">BLE not supported on this device</string>
    <string name="bt_unavailable">Bluetooth unavailable</string>
    <string name="read_manufacturer_name">Read Manufacturer Name</string>
    <string name="read_serial_number">Read Serial Number</string>
    <string name="write_alert_level">Write Alert Level</string>

    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_device_name">Device Name:</string>
    <string name="label_state">State:</string>
    <string name="label_properties">Properties:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>


    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="title_activity_onboarding">OnboardingActivity</string>
    <string name="connect_to_a_device">Connect to a device!</string>
    <string name="connect">Connect</string>
    <string name="device_menu">Device Menu</string>

    <string name="last_connected">Last Connected:</string>
    <string name="device_name">Device Name</string>
    <string name="profile">Profile:</string>
    <string name="one_hour_ago">1 Hour Ago</string>
    <string name="device_name_title">Device Name:</string>
    <string name="device_mac_address_title">Device Mac Address:</string>
    <string name="rssi_value_title">RSSI Value:</string>
    <string name="title_activity_device_scan">DeviceScanActivity</string>

    <string name="action_settings">Settings</string>
    <string name="connecting">Connecting</string>
    <string name="invalid_device_data">Invalid Device Data!</string>
    <string name="not_supported">Not supported</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="supported">Supported</string>
    <string name="unknown">unknown</string>
    <string name="no_known_services">No known services</string>

    <!-- Formatters -->
    <string name="formatter_meters">%sm</string>
    <string name="formatter_db">%sdb</string>
    <string name="formatter_item_count">Items: %s</string>
    <string name="formatter_single_quoted_string">\'%s\'</string>

    <!-- Menu items -->
    <string name="menu_about">About</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_share">Share</string>

    <!-- Export Email Strings -->
    <string name="exporter_email_device_list_subject">Bluetooth LE Scan Results (%s)</string>
    <string name="exporter_email_device_services_subject" formatted="false">Bluetooth LE Device GATT Results (%s, %s)</string>
    <string name="exporter_email_device_list_body">Please find attached the scan results.</string>
    <string name="exporter_email_device_list_picker_text">Please select your email client:</string>

    <!-- Labels -->
    <string name="about_dialog_text">This is a sample application using the Bluetooth LE Library.\n\nGithub: https://github.com/alt236/Bluetooth-LE-Library---Android\n\nCopyright: Alexandros Schillings</string>
    <string name="header_device_info">Device Info</string>
    <string name="header_ibeacon_data">iBeacon Data</string>
    <string name="header_raw_ad_records">Raw Ad Records</string>
    <string name="header_rssi_info">RSSI Info</string>
    <string name="header_scan_record">Scan Record</string>
    <string name="label_advertisement">Advertisement:</string>
    <string name="label_as_array">As Array:</string>
    <string name="label_as_string">As String:</string>
    <string name="label_bluetooth_le_status">Bluetooth LE:</string>
    <string name="label_bluetooth_status">Bluetooth:</string>
    <string name="label_bonding_state">Bonding State:</string>
    <string name="label_company_id">Company ID:</string>
    <string name="label_desc">Desc:</string>
    <string name="label_device_class">Device Class:</string>
    <string name="label_device_major_class">Major Class:</string>
    <string name="label_device_services">Services:</string>
    <string name="label_distance">Distance:</string>
    <string name="label_first_rssi">First RSSI:</string>
    <string name="label_first_timestamp">First Timestamp:</string>
    <string name="label_last_rssi">Last RSSI:</string>
    <string name="label_last_timestamp">Last Timestamp:</string>
    <string name="label_mac">MAC:</string>
    <string name="label_major">Major:</string>
    <string name="label_minor">Minor:</string>
    <string name="label_rssi">RSSI:</string>
    <string name="label_running_average_rssi">Running Average RSSI:</string>
    <string name="label_tx_power">TX Power:</string>
    <string name="label_uuid">UUID:</string>
    <string name="label_updated">Updated:</string>
    <string name="label_decriptor">Descriptor:</string>

    <string name="error_unable_to_access_external_storage">"Could not access external storage!"</string>
    <string name="permission_not_granted_coarse_location">The ACCESS_COARSE_LOCATION permission is needed to receive bluetooth scan results</string>
    <string name="hrl_senior_design_project">HRL Senior Design Project</string>
    <string name="title_activity_device_details">DeviceDetailsActivity</string>
    <string name="capture_image_receive_via_bluetooth">Capture Image Receive via Bluetooth</string>
    <string name="capture_image">Capture Image</string>
    <string name="view_device_details">View Device Details</string>
    <string name="remote_shutdown">Remote Shutdown</string>
    <string name="disconnect_from_device">Disconnect From Device</string>
    <string name="title_activity_connection">ConnectionActivity</string>

    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">Connecting...</string>
    <string name="title_not_connected">Not Connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>
    <string name="title_activity_capture_image">CaptureImageActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_loading_view">LoadingViewActivity</string>
</resources>
