<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_refresh"
        android:checkable="false"
        android:orderInCategory="1"
        android:title=""
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_action_share"
        android:orderInCategory="100"
        android:title="@string/menu_share"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_connect"
        android:orderInCategory="102"
        android:title="@string/menu_connect"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/menu_disconnect"
        android:orderInCategory="103"
        android:title="@string/menu_disconnect"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/menu_advance_forward"
        android:orderInCategory="104"
        android:title="Accept"
        app:showAsAction="ifRoom|withText" />

</menu>