<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:paddingTop="5dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/deviceNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/device_name_title"
        android:textColor="@color/app_blue" />

    <TextView
        android:id="@+id/deviceName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/deviceNameTextView"
        android:layout_toEndOf="@+id/deviceNameTextView"
        android:padding="4dp"
        android:textColor="@color/app_blue" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/deviceName"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/deviceAddressTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/deviceNameTextView"
        android:padding="4dp"
        android:text="@string/device_mac_address_title"
        android:textColor="@color/app_blue"/>

    <TextView
        android:id="@+id/deviceAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_alignBaseline="@+id/deviceAddressTextView"
        android:layout_toEndOf="@+id/deviceAddressTextView"
        android:textColor="@color/app_blue"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/deviceAddress"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/deviceRssiTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/deviceAddressTextView"
        android:padding="4dp"
        android:text="@string/rssi_value_title"
        android:textColor="@color/app_blue"/>

    <TextView
        android:id="@+id/deviceRssi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_alignBaseline="@+id/deviceRssiTextView"
        android:layout_toEndOf="@+id/deviceRssiTextView"
        android:textColor="@color/app_blue"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/deviceRssi"
        android:paddingBottom="5dp"
        android:background="@android:color/darker_gray"/>

</RelativeLayout>